--- a/src/Styles/Components/productCard.css
+++ b/src/Styles/Components/productCard.css
@@ -4,7 +4,6 @@
     height: 430px;
     border-radius: 10px;
     background-color: white;
-    /*flex: 1 0 22%;*/
 }
 
 .card-shadow {
@@ -12,7 +11,8 @@
 }
 
 .card-container {
-    width: 140px;
+    width: 80%;
+    min-width: 140px;
     margin: auto;
     display: flex;
     flex-direction: column;
