--- a/src/Styles/Components/productCard.css
+++ b/src/Styles/Components/productCard.css
@@ -4,10 +4,19 @@
     height: 430px;
     border-radius: 10px;
     background-color: white;
+    transition: transform 0.5s, box-shadow 0.5s;
+}
+
+.card-root:hover {
+    transform: scale(1.05);
 }
 
 .card-shadow {
     box-shadow: 0 5px 8px -3px rgb(166 196 198 / 35%);
+}
+
+.card-shadow:hover {
+    box-shadow: 0 5px 8px -2px rgba(88, 100, 100, 0.35);
 }
 
 .card-container {
@@ -31,6 +40,7 @@
 
 .product-name {
     width: 100%;
+    height: 60px;
     text-align: center;
     font-family: "Segoe UI Light", sans-serif;
     font-size: 13px;
@@ -40,7 +50,7 @@
 .product-price {
     color: #707070;
     font-family: IRTitr, sans-serif;
-    margin-top: 40px;
+    margin-top: 20px;
     direction: rtl;
     text-align: left;
 }
