--- a/src/Styles/Components/sideFilter.css
+++ b/src/Styles/Components/sideFilter.css
@@ -11,6 +11,7 @@
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
+    padding-top: 0;
     direction: rtl;
     position: relative;
     font-family: "B Yekan", sans-serif;
@@ -39,12 +40,15 @@
 }
 
 .side-filter-list {
-    width: 85%;
+    width: 100%;
     max-height: 300px;
     overflow-y: scroll;
     margin-inline: auto;
-    margin-top: 10px;
     color: #707070;
+}
+
+.overflow-visible {
+    overflow: visible!important;
 }
 
 @media (min-width: 1024px) {
