--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(251, 251, 251);
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none;
 }
 
 code {
@@ -29,3 +33,4 @@ code {
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(121, 121, 121, 0.6);
 }
+
