Finalize the Item Page and Introduce Drawer and it's derivatives

--- a/src/Styles/Components/counter.css
+++ b/src/Styles/Components/counter.css
@@ -1,5 +1,6 @@
 .product-counter {
-    width: 130px;
+    width: 110px;
+    margin-left: 20px;
     height: 30px;
     display: flex;
     justify-content: space-between;
