--- a/src/Styles/Components/ProductPlate.css
+++ b/src/Styles/Components/ProductPlate.css
@@ -48,8 +48,6 @@
     direction: rtl;
 }
 
-
-
 .product-plate-right-side {
     color: #707070;
     font-size: 16px;
@@ -65,11 +63,47 @@
     color: black;
 }
 
-@media (min-width: 1024px) {
-    .product-plate-container-outer {
-        height: 500px;
-    }
+.product-details-root {
+    width: 100%;
+    font-family: "Segoe UI Light", sans-serif;
+    position: relative;
+}
 
+.product-details-header-outer {
+    display: flex;
+    width: 100%;
+    box-sizing: border-box;
+    border-top: 0.25px solid rgba(0, 0, 0, 0.5);
+}
+
+.product-details-header-inner {
+    margin-inline: auto;
+    padding-block: 10px;
+    padding-inline: 25px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #0080FF;
+    color: white;
+    font-family: "B Yekan", sans-serif;
+}
+
+.product-details-container {
+    width: 100%;
+    background: linear-gradient(#000, #000) no-repeat center/0.25px 100%;
+}
+
+.product-details {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+    padding-block: 20px;
+    padding-inline: 40px;
+    font-size: 15px;
+}
+
+@media (min-width: 1024px) {
     .product-plate-container-inner {
         flex-direction: row;
     }
