--- a/src/Styles/Components/navbar.css
+++ b/src/Styles/Components/navbar.css
@@ -21,6 +21,7 @@
 
 .navbar-logo {
     height: 50px;
+    cursor: pointer;
 }
 
 .navbar-icon-container .MuiButtonBase-root {
@@ -38,10 +39,33 @@
     font-size: 13px;
 }
 
+.drawer-info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: white;
+    row-gap: 30px;
+    padding: 10px;
+    border-radius: 10px;
+    direction: rtl;
+}
+
+.drawer-wallet-container {
+    width: 75%;
+    padding-top: 10px;
+}
+
+.css-10hburv-MuiTypography-root {
+    font-family: "Segoe UI Light", sans-serif!important;
+    font-size: 15px;
+}
+
 @media (min-width: 1024px) {
     .sub-navbar-container {
         display: flex;
         justify-content: space-between;
+        flex-direction: row-reverse;
         width: 100%;
         height: 45px;
         padding-top: 10px;
