--- a/src/Styles/Components/contentContainer.css
+++ b/src/Styles/Components/contentContainer.css
@@ -5,8 +5,14 @@
     justify-content: space-between;
     row-gap: 20px;
     margin-inline: auto;
-    margin-top: 120px;
+    margin-top: 60px;
     margin-bottom: 30px;
+}
+
+@media (min-width: 1024px) {
+    .content-container {
+        margin-top: 110px;
+    }
 }
 
 @media (min-width: 1200px) {
