--- a/src/Styles/Components/productCard.css
+++ b/src/Styles/Components/productCard.css
@@ -5,6 +5,7 @@
     border-radius: 10px;
     background-color: white;
     transition: transform 0.5s, box-shadow 0.5s;
+    cursor: pointer;
 }
 
 .card-root:hover {
