--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none;
+  overflow-x: hidden;
 }
 
 code {
