--- a/src/Styles/Components/menuButton.css
+++ b/src/Styles/Components/menuButton.css
@@ -14,7 +14,7 @@
 }
 
 .navbar-menu-btn-inner {
-    font-family: "B Yekan", sans-serif;
+    font-family: "Yekan", sans-serif;
     color: #707070;
     margin: 5px;
 }
