--- a/src/Styles/Components/products.css
+++ b/src/Styles/Components/products.css
@@ -28,7 +28,7 @@
 }
 
 .products-top-filter-title {
-    font-family: "B Yekan", sans-serif;
+    font-family: "Yekan", sans-serif;
     color: #707070;
     padding-top: 5px;
 }
