--- a/src/Styles/Pages/cartPage.css
+++ b/src/Styles/Pages/cartPage.css
@@ -41,7 +41,7 @@
 
 th {
     color: #0080FF;
-    font-family: "B Yekan", sans-serif;
+    font-family: "Yekan", sans-serif;
     padding: 25px;
 }
 
