--- a/src/Styles/Pages/itemPage.css
+++ b/src/Styles/Pages/itemPage.css
@@ -39,7 +39,7 @@
 
 .product-info-price {
     color: #00ACFF;
-    font-family: "B Yekan", sans-serif;
+    font-family: "Yekan", sans-serif;
     font-weight: bold;
 }
 
@@ -88,7 +88,7 @@
     border-bottom-right-radius: 10px;
     background-color: #0080FF;
     color: white;
-    font-family: "B Yekan", sans-serif;
+    font-family: "Yekan", sans-serif;
 }
 
 .product-details-container {
