--- a/src/Styles/Components/sideFilter.css
+++ b/src/Styles/Components/sideFilter.css
@@ -13,7 +13,7 @@
     padding-top: 0;
     direction: rtl;
     position: relative;
-    font-family: "B Yekan", sans-serif;
+    font-family: "Yekan", sans-serif;
     color: #545454;
 }
 
