--- a/src/Styles/Pages/accountPage.css
+++ b/src/Styles/Pages/accountPage.css
@@ -48,7 +48,7 @@
 
 th {
     color: #0080FF;
-    font-family: "B Yekan", sans-serif;
+    font-family: "Yekan", sans-serif;
     padding: 25px;
 }
 
