--- a/src/Styles/layout/footer.css
+++ b/src/Styles/layout/footer.css
@@ -11,7 +11,7 @@
     width: 85%;
     margin-inline: auto;
     display: flex;
-    font-family: "B Yekan", sans-serif;
+    font-family: "Yekan", sans-serif;
     justify-content: flex-end;
     flex-direction: column;
     padding: 20px;
