--- a/src/Styles/Pages/itemPage.css
+++ b/src/Styles/Pages/itemPage.css
@@ -63,7 +63,7 @@
 .product-exp {
     font-family: "Segoe UI Light", sans-serif;
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     color: black;
 }
 
@@ -124,5 +124,7 @@
     .product-plate-right-side {
         width: 400px;
         margin-top: 0;
+        box-sizing: border-box;
+        padding-left: 25px;
     }
 }
