--- a/src/Styles/layout/contentContainer.css
+++ b/src/Styles/layout/contentContainer.css
@@ -1,5 +1,6 @@
 .content-container {
     width: 90%;
+    max-width: 1300px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
