--- a/src/Styles/layout/loading.css
+++ b/src/Styles/layout/loading.css
@@ -7,7 +7,7 @@
     align-items: center;
     position: fixed;
     top : 0;
-    z-index: 999999999999999999999999999999999;
+    z-index: 9;
     background-color: #ffffff;
 }
 
