--- a/src/Styles/Components/Popovers/accountPopover.scss
+++ b/src/Styles/Components/Popovers/accountPopover.scss
@@ -1,4 +1,5 @@
 @import '../../mixins';
+@import '../../variables';
 
 .account__popover {
   width: 300px;
@@ -17,7 +18,7 @@
   border-top-right-radius: 10px;
   direction: rtl;
   font-family: "Segoe UI Light", sans-serif;
-  background-color: #0080FF;
+  background-color: $primary-color;
   color: white;
 }
 
@@ -38,7 +39,7 @@
   padding: 15px;
   border-radius: 5px;
   color: white;
-  background-color: #0080FF;
+  background-color: $primary-color;
 }
 
 .account__order {
