--- a/src/Styles/Components/Popovers/userPopover.scss
+++ b/src/Styles/Components/Popovers/userPopover.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .user__popover {
     width: 300px;
     border-radius: 10px;
@@ -9,7 +11,7 @@
 .user__popover__header {
     width: 100%;
     height: 120px;
-    background-color: #0080FF;
+    background-color: $primary-color;
     color: white;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
