--- a/src/Styles/Components/counter.scss
+++ b/src/Styles/Components/counter.scss
@@ -1,9 +1,10 @@
 @import '../mixins';
+@import '../variables';
 
 .counter {
   @include flex(row, space-between, center);
   width: 110px;
   height: 30px;
   margin-left: 20px;
-  color: #707070;
+  color: $gray;
 }
