--- a/src/Styles/Components/products.scss
+++ b/src/Styles/Components/products.scss
@@ -1,4 +1,5 @@
 @import '../mixins';
+@import '../variables';
 
 .products {
   display: flex;
@@ -24,13 +25,13 @@
 .products__filter {
   display: flex;
   direction: rtl;
-  color: #8d8d8d;
+  color: $light-gray;
 }
 
 .products__filter__title {
   padding-top: 5px;
   font-family: "Yekan", sans-serif;
-  color: #707070;
+  color: $gray;
 }
 
 .products__grid {
