--- a/src/Styles/Components/searchBar.scss
+++ b/src/Styles/Components/searchBar.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 .search-bar {
   display: none;
   align-items: center;
@@ -6,8 +8,8 @@
   width: 45%;
   height: 60px;
   border-radius: 50px;
-  background-color: rgb(249, 249, 249);
-  color: #707070;
+  background-color: $background-color;
+  color: $gray;
 }
 
 .filter__dialog {
