--- a/src/Styles/Components/sideFilter.scss
+++ b/src/Styles/Components/sideFilter.scss
@@ -4,6 +4,7 @@
   border-radius: 10px;
   background-color: white;
   box-shadow: 0 5px 8px -3px rgb(0 0 0 / 10%);
+  color: #707070
 }
 
 .side__filter__header {
@@ -13,7 +14,6 @@
   direction: rtl;
   position: relative;
   font-family: "Yekan", sans-serif;
-  color: #545454;
 }
 
 .side__filter__title {
@@ -42,7 +42,6 @@
   max-height: 300px;
   margin: 0 auto;
   overflow-y: scroll;
-  color: #707070;
 }
 
 .overflow--visible {
