--- a/src/Styles/Pages/accountPage.scss
+++ b/src/Styles/Pages/accountPage.scss
@@ -1,4 +1,5 @@
 @import '../mixins';
+@import '../variables';
 
 .user__root {
   @include flex(column, space-between);
@@ -17,7 +18,7 @@
   width: 100%;
   box-sizing: border-box;
   padding-inline: 20px;
-  color: #707070;
+  color: $gray;
 }
 
 .orders__table__header--inner {
@@ -49,13 +50,13 @@
 th {
   padding: 25px;
   font-family: "Yekan", sans-serif;
-  color: #0080FF;
+  color: $primary-color;
 }
 
 td {
   padding: 15px 25px;
   font-weight: bold;
-  color: #707070;
+  color: $gray;
 }
 
 .account__user__info {
@@ -100,7 +101,7 @@ td {
   margin-bottom: 10px;
   font-family: "Segoe UI Light", sans-serif;
   font-size: 12px;
-  color: #707070;
+  color: $gray;
 }
 
 @media (min-width: 1024px) {
