--- a/src/Styles/Pages/itemPage.scss
+++ b/src/Styles/Pages/itemPage.scss
@@ -1,4 +1,5 @@
 @import '../mixins';
+@import '../variables';
 
 .product__plate--outer {
   width: 100%;
@@ -37,7 +38,7 @@
 .product__plate__price {
   font-family: "Yekan", sans-serif;
   font-weight: bold;
-  color: #00ACFF;
+  color: $primary-color;
 }
 
 .text--danger {
@@ -54,7 +55,7 @@
   direction: rtl;
   font-size: 16px;
   font-family: "B Nazanin", sans-serif;
-  color: #707070;
+  color: $gray;
 }
 
 .product__exp {
@@ -84,7 +85,7 @@
   border-bottom-right-radius: 10px;
   font-family: "Yekan", sans-serif;
   color: white;
-  background-color: #0080FF;
+  background-color: $primary-color;
 }
 
 .product__details__container {
