--- a/src/Styles/Pages/loginPage.scss
+++ b/src/Styles/Pages/loginPage.scss
@@ -1,4 +1,5 @@
 @import '../mixins';
+@import '../variables';
 
 .login {
   @include flex(row, center, center);
@@ -20,7 +21,7 @@
   box-sizing: border-box;
   padding: 0 20px;
   direction: rtl;
-  color: #707070;
+  color: $gray;
 }
 
 .login__header--inner {
