--- a/src/Styles/global.scss
+++ b/src/Styles/global.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 body {
   margin: 0;
   font-family: "Segoe UI Light", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(251, 251, 251);
+  background-color: $background-color;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
