--- a/src/Styles/layout/loading.scss
+++ b/src/Styles/layout/loading.scss
@@ -1,4 +1,5 @@
 @import '../mixins';
+@import '../variables';
 
 .loading {
   @include flex(column, center, center);
@@ -7,7 +8,7 @@
   position: fixed;
   top: 0;
   z-index: 9;
-  background-color: #ffffff;
+  background-color: white;
 }
 
 .loading--disabled {
@@ -22,5 +23,5 @@
 .loading__text {
   font-family: Yekan, sans-serif;
   font-size: 20px;
-  color: #707070;
+  color: $gray;
 }
